<resources>
    <string name="app_name">Ch. 3 - Tip Calculator</string>
    <string name="_18">18%</string>
    <string name="_15">15%</string>
    <string name="_20">20%</string>
    <string name="tip_99_99_total_99_99">Tip: $99.99, Total: $99.99</string>
    <!--//<string name="tip_99_99">Tip: %s</string>
    //<string name="total_99_99">Total: %s</string>-->
    <string name="enter_bill_amount">Enter Bill Amount</string>
</resources>